a bit update on documentation
