# swagger.json
@@ -144,105 +144,9 @@
         ],
         "parameters": [],
         "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "data": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "id": {
-                        "type": "number"
-                      },
-                      "userId": {
-                        "type": "string"
-                      },
-                      "scheduleId": {
-                        "type": "number"
-                      },
-                      "startTime": {
-                        "type": "string"
-                      },
-                      "endTime": {
-                        "type": "string"
-                      },
-                      "description": {
-                        "type": "string"
-                      }
-                    },
-                    "required": [
-                      "id",
-                      "userId",
-                      "scheduleId",
-                      "startTime",
-                      "endTime",
-                      "description"
-                    ]
-                  },
-                  "example": [
-                    {
-                      "id": 12,
-                      "userId": "ed567",
-                      "scheduleId": 6,
-                      "startTime": "2024-03-28T13:30:00.000Z",
-                      "endTime": "2024-03-28T14:00:00.000Z",
-                      "description": "Course Selection"
-                    }
-                  ]
-                },
-                "pagination": {
-                  "type": "object",
-                  "properties": {
-                    "total": {
-                      "type": "number",
-                      "example": 20
-                    },
-                    "page": {
-                      "type": "number",
-                      "example": 1
-                    },
-                    "limit": {
-                      "type": "number",
-                      "example": 10
-                    },
-                    "totalPages": {
-                      "type": "number",
-                      "example": 2
-                    }
-                  }
-                },
-                "_links": {
-                  "type": "object",
-                  "properties": {
-                    "self": {
-                      "type": "string",
-                      "example": "http://localhost:3000/appointments?page=1&limit=10"
-                    },
-                    "first": {
-                      "type": "string",
-                      "example": "http://localhost:3000/appointments?page=1&limit=10"
-                    },
-                    "last": {
-                      "type": "string",
-                      "example": "http://localhost:3000/appointments?page=2&limit=10"
-                    },
-                    "next": {
-                      "type": "string",
-                      "example": "http://localhost:3000/appointments?page=2&limit=10"
-                    }
-                  }
-                }
-              }
-            }
-          }
+          "304": {}
         },
-        "tags": [],
-        "produces": [
-          "application/json"
-        ]
+        "tags": []
       },
       "post": {
         "summary": "/appointments",
